--- a/client/package.json
+++ b/client/package.json
@@ -20,9 +20,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@iconify/react": "^5.0.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "dotenv": "^16.4.5",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
